Compiladores/sintatico/sintatico.output
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 2 shift/reduce
State 60 conflicts: 9 shift/reduce
State 61 conflicts: 9 shift/reduce
State 62 conflicts: 2 shift/reduce
State 63 conflicts: 2 shift/reduce
State 64 conflicts: 2 shift/reduce
State 65 conflicts: 2 shift/reduce
State 66 conflicts: 2 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: cabecalho variaveis T_INICIO lista_comandos T_FIM

    2 cabecalho: T_PROGRAMA T_IDENTIF

    3 variaveis: ε
    4          | declaracao_variaveis

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    6                     | tipo lista_variaveis

    7 tipo: T_LOGICO
    8     | T_INTEIRO

    9 lista_variaveis: T_IDENTIF lista_variaveis
   10                | T_IDENTIF

   11 lista_comandos: ε
   12               | comando lista_comandos

   13 comando: entrada_saida
   14        | atribuicao
   15        | selecao
   16        | repeticao

   17 entrada_saida: entrada
   18              | saida

   19 entrada: T_LEIA T_IDENTIF

   20 saida: T_ESCREVA expressao

   21 atribuicao: T_IDENTIF T_ATRIB expressao

   22 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

   23 repeticao: T_ENQTO expressao T_FACA lista_comandos T_FIMENQTO

   24 expressao: expressao T_VEZES expressao
   25          | expressao T_DIV expressao
   26          | expressao T_MAIS expressao
   27          | expressao T_MENOS expressao
   28          | expressao T_MAIOR expressao
   29          | expressao T_MENOR expressao
   30          | expressao T_E expressao
   31          | expressao T_IGUAL expressao
   32          | expressao T_OU expressao
   33          | termo

   34 termo: T_IDENTIF
   35      | T_NUMERO
   36      | T_V
   37      | T_F
   38      | T_NAO termo
   39      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 2
    T_INICIO (259) 1
    T_FIM (260) 1
    T_IDENTIF (261) 2 9 10 19 21 34
    T_LEIA (262) 19
    T_ESCREVA (263) 20
    T_ENQTO (264) 23
    T_FACA (265) 23
    T_FIMENQTO (266) 23
    T_SE (267) 22
    T_SENAO (268) 22
    T_FIMSE (269) 22
    T_ATRIB (270) 21
    T_VEZES (271) 24
    T_DIV (272) 25
    T_MAIS (273) 26
    T_MENOS (274) 27
    T_MAIOR (275) 28
    T_MENOR (276) 29
    T_IGUAL (277) 31
    T_E (278) 30
    T_OU (279) 32
    T_V (280) 36
    T_F (281) 37
    T_NUMERO (282) 35
    T_NAO (283) 38
    T_ABRE (284) 39
    T_FECHA (285) 39
    T_LOGICO (286) 7
    T_INTEIRO (287) 8
    T_ENTAO (288) 22


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 1
        on right: 0
    cabecalho (36)
        on left: 2
        on right: 1
    variaveis (37)
        on left: 3 4
        on right: 1
    declaracao_variaveis (38)
        on left: 5 6
        on right: 4 5
    tipo (39)
        on left: 7 8
        on right: 5 6
    lista_variaveis (40)
        on left: 9 10
        on right: 5 6 9
    lista_comandos (41)
        on left: 11 12
        on right: 1 12 22 23
    comando (42)
        on left: 13 14 15 16
        on right: 12
    entrada_saida (43)
        on left: 17 18
        on right: 13
    entrada (44)
        on left: 19
        on right: 17
    saida (45)
        on left: 20
        on right: 18
    atribuicao (46)
        on left: 21
        on right: 14
    selecao (47)
        on left: 22
        on right: 15
    repeticao (48)
        on left: 23
        on right: 16
    expressao (49)
        on left: 24 25 26 27 28 29 30 31 32 33
        on right: 20 21 22 23 24 25 26 27 28 29 30 31 32 39
    termo (50)
        on left: 34 35 36 37 38 39
        on right: 33 38


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    2 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    1 programa: cabecalho • variaveis T_INICIO lista_comandos T_FIM

    T_LOGICO   shift, and go to state 6
    T_INTEIRO  shift, and go to state 7

    $default  reduce using rule 3 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    2 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 2 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    7 tipo: T_LOGICO •

    $default  reduce using rule 7 (tipo)


State 7

    8 tipo: T_INTEIRO •

    $default  reduce using rule 8 (tipo)


State 8

    1 programa: cabecalho variaveis • T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 11


State 9

    4 variaveis: declaracao_variaveis •

    $default  reduce using rule 4 (variaveis)


State 10

    5 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    6                     | tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13


State 11

    1 programa: cabecalho variaveis T_INICIO • lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 14
    T_LEIA     shift, and go to state 15
    T_ESCREVA  shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_SE       shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 19
    comando         go to state 20
    entrada_saida   go to state 21
    entrada         go to state 22
    saida           go to state 23
    atribuicao      go to state 24
    selecao         go to state 25
    repeticao       go to state 26


State 12

    9 lista_variaveis: T_IDENTIF • lista_variaveis
   10                | T_IDENTIF •

    T_IDENTIF  shift, and go to state 12

    $default  reduce using rule 10 (lista_variaveis)

    lista_variaveis  go to state 27


State 13

    5 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    6                     | tipo lista_variaveis •

    T_LOGICO   shift, and go to state 6
    T_INTEIRO  shift, and go to state 7

    $default  reduce using rule 6 (declaracao_variaveis)

    declaracao_variaveis  go to state 28
    tipo                  go to state 10


State 14

   21 atribuicao: T_IDENTIF • T_ATRIB expressao

    T_ATRIB  shift, and go to state 29


State 15

   19 entrada: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 30


State 16

   20 saida: T_ESCREVA • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 37
    termo      go to state 38


State 17

   23 repeticao: T_ENQTO • expressao T_FACA lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 39
    termo      go to state 38


State 18

   22 selecao: T_SE • expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 40
    termo      go to state 38


State 19

    1 programa: cabecalho variaveis T_INICIO lista_comandos • T_FIM

    T_FIM  shift, and go to state 41


State 20

   12 lista_comandos: comando • lista_comandos

    T_IDENTIF  shift, and go to state 14
    T_LEIA     shift, and go to state 15
    T_ESCREVA  shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_SE       shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 42
    comando         go to state 20
    entrada_saida   go to state 21
    entrada         go to state 22
    saida           go to state 23
    atribuicao      go to state 24
    selecao         go to state 25
    repeticao       go to state 26


State 21

   13 comando: entrada_saida •

    $default  reduce using rule 13 (comando)


State 22

   17 entrada_saida: entrada •

    $default  reduce using rule 17 (entrada_saida)


State 23

   18 entrada_saida: saida •

    $default  reduce using rule 18 (entrada_saida)


State 24

   14 comando: atribuicao •

    $default  reduce using rule 14 (comando)


State 25

   15 comando: selecao •

    $default  reduce using rule 15 (comando)


State 26

   16 comando: repeticao •

    $default  reduce using rule 16 (comando)


State 27

    9 lista_variaveis: T_IDENTIF lista_variaveis •

    $default  reduce using rule 9 (lista_variaveis)


State 28

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 5 (declaracao_variaveis)


State 29

   21 atribuicao: T_IDENTIF T_ATRIB • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 43
    termo      go to state 38


State 30

   19 entrada: T_LEIA T_IDENTIF •

    $default  reduce using rule 19 (entrada)


State 31

   34 termo: T_IDENTIF •

    $default  reduce using rule 34 (termo)


State 32

   36 termo: T_V •

    $default  reduce using rule 36 (termo)


State 33

   37 termo: T_F •

    $default  reduce using rule 37 (termo)


State 34

   35 termo: T_NUMERO •

    $default  reduce using rule 35 (termo)


State 35

   38 termo: T_NAO • termo

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    termo  go to state 44


State 36

   39 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 45
    termo      go to state 38


State 37

   20 saida: T_ESCREVA expressao •
   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54

    $default  reduce using rule 20 (saida)


State 38

   33 expressao: termo •

    $default  reduce using rule 33 (expressao)


State 39

   23 repeticao: T_ENQTO expressao • T_FACA lista_comandos T_FIMENQTO
   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_FACA   shift, and go to state 55
    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54


State 40

   22 selecao: T_SE expressao • T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE
   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54
    T_ENTAO  shift, and go to state 56


State 41

    1 programa: cabecalho variaveis T_INICIO lista_comandos T_FIM •

    $default  reduce using rule 1 (programa)


State 42

   12 lista_comandos: comando lista_comandos •

    $default  reduce using rule 12 (lista_comandos)


State 43

   21 atribuicao: T_IDENTIF T_ATRIB expressao •
   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54

    $default  reduce using rule 21 (atribuicao)


State 44

   38 termo: T_NAO termo •

    $default  reduce using rule 38 (termo)


State 45

   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao
   39 termo: T_ABRE expressao • T_FECHA

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54
    T_FECHA  shift, and go to state 57


State 46

   24 expressao: expressao T_VEZES • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 58
    termo      go to state 38


State 47

   25 expressao: expressao T_DIV • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 59
    termo      go to state 38


State 48

   26 expressao: expressao T_MAIS • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 60
    termo      go to state 38


State 49

   27 expressao: expressao T_MENOS • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 61
    termo      go to state 38


State 50

   28 expressao: expressao T_MAIOR • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 62
    termo      go to state 38


State 51

   29 expressao: expressao T_MENOR • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 63
    termo      go to state 38


State 52

   31 expressao: expressao T_IGUAL • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 64
    termo      go to state 38


State 53

   30 expressao: expressao T_E • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 65
    termo      go to state 38


State 54

   32 expressao: expressao T_OU • expressao

    T_IDENTIF  shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_NUMERO   shift, and go to state 34
    T_NAO      shift, and go to state 35
    T_ABRE     shift, and go to state 36

    expressao  go to state 66
    termo      go to state 38


State 55

   23 repeticao: T_ENQTO expressao T_FACA • lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 14
    T_LEIA     shift, and go to state 15
    T_ESCREVA  shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_SE       shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 67
    comando         go to state 20
    entrada_saida   go to state 21
    entrada         go to state 22
    saida           go to state 23
    atribuicao      go to state 24
    selecao         go to state 25
    repeticao       go to state 26


State 56

   22 selecao: T_SE expressao T_ENTAO • lista_comandos T_SENAO lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 14
    T_LEIA     shift, and go to state 15
    T_ESCREVA  shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_SE       shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 68
    comando         go to state 20
    entrada_saida   go to state 21
    entrada         go to state 22
    saida           go to state 23
    atribuicao      go to state 24
    selecao         go to state 25
    repeticao       go to state 26


State 57

   39 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 39 (termo)


State 58

   24 expressao: expressao • T_VEZES expressao
   24          | expressao T_VEZES expressao •
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49

    T_MAIS    [reduce using rule 24 (expressao)]
    T_MENOS   [reduce using rule 24 (expressao)]
    $default  reduce using rule 24 (expressao)


State 59

   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   25          | expressao T_DIV expressao •
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49

    T_MAIS    [reduce using rule 25 (expressao)]
    T_MENOS   [reduce using rule 25 (expressao)]
    $default  reduce using rule 25 (expressao)


State 60

   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   26          | expressao T_MAIS expressao •
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54

    T_VEZES   [reduce using rule 26 (expressao)]
    T_DIV     [reduce using rule 26 (expressao)]
    T_MAIS    [reduce using rule 26 (expressao)]
    T_MENOS   [reduce using rule 26 (expressao)]
    T_MAIOR   [reduce using rule 26 (expressao)]
    T_MENOR   [reduce using rule 26 (expressao)]
    T_IGUAL   [reduce using rule 26 (expressao)]
    T_E       [reduce using rule 26 (expressao)]
    T_OU      [reduce using rule 26 (expressao)]
    $default  reduce using rule 26 (expressao)


State 61

   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   27          | expressao T_MENOS expressao •
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52
    T_E      shift, and go to state 53
    T_OU     shift, and go to state 54

    T_VEZES   [reduce using rule 27 (expressao)]
    T_DIV     [reduce using rule 27 (expressao)]
    T_MAIS    [reduce using rule 27 (expressao)]
    T_MENOS   [reduce using rule 27 (expressao)]
    T_MAIOR   [reduce using rule 27 (expressao)]
    T_MENOR   [reduce using rule 27 (expressao)]
    T_IGUAL   [reduce using rule 27 (expressao)]
    T_E       [reduce using rule 27 (expressao)]
    T_OU      [reduce using rule 27 (expressao)]
    $default  reduce using rule 27 (expressao)


State 62

   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   28          | expressao T_MAIOR expressao •
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49

    T_MAIS    [reduce using rule 28 (expressao)]
    T_MENOS   [reduce using rule 28 (expressao)]
    $default  reduce using rule 28 (expressao)


State 63

   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   29          | expressao T_MENOR expressao •
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49

    T_MAIS    [reduce using rule 29 (expressao)]
    T_MENOS   [reduce using rule 29 (expressao)]
    $default  reduce using rule 29 (expressao)


State 64

   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   31          | expressao T_IGUAL expressao •
   32          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51

    T_MAIS    [reduce using rule 31 (expressao)]
    T_MENOS   [reduce using rule 31 (expressao)]
    $default  reduce using rule 31 (expressao)


State 65

   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   30          | expressao T_E expressao •
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52

    T_MAIS    [reduce using rule 30 (expressao)]
    T_MENOS   [reduce using rule 30 (expressao)]
    $default  reduce using rule 30 (expressao)


State 66

   24 expressao: expressao • T_VEZES expressao
   25          | expressao • T_DIV expressao
   26          | expressao • T_MAIS expressao
   27          | expressao • T_MENOS expressao
   28          | expressao • T_MAIOR expressao
   29          | expressao • T_MENOR expressao
   30          | expressao • T_E expressao
   31          | expressao • T_IGUAL expressao
   32          | expressao • T_OU expressao
   32          | expressao T_OU expressao •

    T_VEZES  shift, and go to state 46
    T_DIV    shift, and go to state 47
    T_MAIS   shift, and go to state 48
    T_MENOS  shift, and go to state 49
    T_MAIOR  shift, and go to state 50
    T_MENOR  shift, and go to state 51
    T_IGUAL  shift, and go to state 52

    T_MAIS    [reduce using rule 32 (expressao)]
    T_MENOS   [reduce using rule 32 (expressao)]
    $default  reduce using rule 32 (expressao)


State 67

   23 repeticao: T_ENQTO expressao T_FACA lista_comandos • T_FIMENQTO

    T_FIMENQTO  shift, and go to state 69


State 68

   22 selecao: T_SE expressao T_ENTAO lista_comandos • T_SENAO lista_comandos T_FIMSE

    T_SENAO  shift, and go to state 70


State 69

   23 repeticao: T_ENQTO expressao T_FACA lista_comandos T_FIMENQTO •

    $default  reduce using rule 23 (repeticao)


State 70

   22 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO • lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 14
    T_LEIA     shift, and go to state 15
    T_ESCREVA  shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_SE       shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 71
    comando         go to state 20
    entrada_saida   go to state 21
    entrada         go to state 22
    saida           go to state 23
    atribuicao      go to state 24
    selecao         go to state 25
    repeticao       go to state 26


State 71

   22 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos • T_FIMSE

    T_FIMSE  shift, and go to state 72


State 72

   22 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE •

    $default  reduce using rule 22 (selecao)
